<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/exchange"
        android:icon="@drawable/exchange"
        android:title="ОБМЕН"/>
    <item
        android:id="@+id/history"
        android:icon="@drawable/history"
        android:title="ИСТОРИЯ" />
    <item
        android:id="@+id/analytics"
        android:icon="@drawable/analytics"
        android:title="АНАЛИТИКА" />
</menu>