<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tfs_exchange.MainActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/choose_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/filter"
        android:layout_margin="8dp"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/filter_text_view"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:background="@color/menuYellow"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_alignParentTop="true" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/filter_text_view"/>

</RelativeLayout>