<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/analytics_recycler"
        android:layout_width="match_parent"
        android:layout_height="120dip"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/graph_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:minHeight="60dp"
        android:minWidth="60dp"
        android:indeterminateTint="@color/menuYellow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="300dip"
        android:layout_marginTop="8dp"
        android:background="#C0C0C0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/analytics_recycler"
        android:layout_below="@+id/analytics_recycler"/>

    <RadioGroup
        android:id="@+id/choose_period"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_below="@+id/graph"
        android:layout_centerInParent="true"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:checkedButton = "@+id/week_button">

        <RadioButton
            android:id ="@+id/week_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/week"
            android:textColor="@color/colorText"
            android:textSize="18sp"/>

        <RadioButton
            android:id="@+id/two_weeks_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two_weeks"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/month_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:textColor="@color/colorText"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/error_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_error"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColor="@color/colorText"
        android:textSize="32sp" />

</RelativeLayout>
</ScrollView>